fix: overflow movil

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,8 +123,12 @@
     @apply bg-background text-foreground;
   }
 }
-
+* {
+  box-sizing: border-box;
+  max-width: 100%;
+}
 html, body {
   max-width: 100vw;
   overflow-x: hidden;
+  width: 100%;
 }
